--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/jopemachine/wf-creator-core#readme",
   "devDependencies": {
+    "@types/node": "^14.14.35",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "conf": "^9.0.2",
     "execa": "^5.0.0",
+    "fs-extra": "^9.1.0",
+    "meow": "^9.0.0",
     "open": "^8.0.4"
   }
 }
