--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npm run build && dist/cli.js"
+    "start": "npm run build && dist/cli.js",
+    "local-install": "npm i -g ./"
   },
   "repository": {
     "type": "git",
@@ -22,13 +23,17 @@
   },
   "homepage": "https://github.com/jopemachine/wf-creator-core#readme",
   "devDependencies": {
+    "@types/fs-extra": "^9.0.8",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.35",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "ajv": "^7.2.3",
     "conf": "^9.0.2",
     "execa": "^5.0.0",
     "fs-extra": "^9.1.0",
+    "lodash": "^4.17.21",
     "meow": "^9.0.0",
     "open": "^8.0.4"
   }
