--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "demo version",
   "main": "dist/index.js",
+  "bin": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -29,7 +30,6 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "ajv": "^7.2.3",
     "conf": "^9.0.2",
     "execa": "^5.0.0",
     "fs-extra": "^9.1.0",
