--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
+    "clipboardy": "^2.3.0",
     "conf": "^9.0.2",
+    "download-git-repo": "^3.0.2",
     "execa": "^5.0.0",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
