--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clipboardy": "^2.3.0",
     "conf": "^9.0.2",
     "download-git-repo": "^3.0.2",
+    "env-paths": "^2.2.1",
     "execa": "^5.0.0",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
