--- a/package.json
+++ b/package.json
@@ -18,29 +18,40 @@
   "keywords": [
     "arvis"
   ],
-  "author": "jopemachine",
+  "author": {
+    "name": "jopemachine",
+    "email": "jopemachine@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jopemachine/arvis-core/issues"
   },
   "homepage": "https://github.com/jopemachine/arvis-core#readme",
   "devDependencies": {
+    "@types/archiver": "^5.1.0",
     "@types/fs-extra": "^9.0.8",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.35",
+    "@types/recursive-readdir": "^2.2.0",
+    "@types/unzipper": "^0.10.3",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "archiver": "^5.3.0",
+    "arvis-plist-converter": "../arvis-plist-converter",
     "chalk": "^4.1.0",
     "clipboardy": "^2.3.0",
     "conf": "^10.0.1",
-    "download-git-repo": "^3.0.2",
     "electron-store": "^8.0.0",
     "env-paths": "^2.2.1",
     "execa": "^5.0.0",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
     "meow": "^9.0.0",
-    "open": "^8.0.4"
+    "open": "^8.0.4",
+    "recursive-readdir": "^2.2.2",
+    "unzipper": "^0.10.11",
+    "uuid": "^8.3.2"
   }
 }
