--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/jopemachine/arvis-core#readme",
   "devDependencies": {
     "@types/archiver": "^5.1.0",
+    "@types/chmodr": "^1.0.0",
     "@types/fs-extra": "^9.0.8",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.35",
@@ -41,6 +42,7 @@
     "archiver": "^5.3.0",
     "arvis-plist-converter": "../arvis-plist-converter",
     "chalk": "^4.1.0",
+    "chmodr": "^1.2.0",
     "clipboardy": "^2.3.0",
     "env-paths": "^2.2.1",
     "execa": "^5.0.0",
