--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/recursive-readdir": "^2.2.0",
     "@types/unzipper": "^0.10.3",
     "@types/uuid": "^8.3.0",
+    "jsdoc": "^3.6.6",
     "typescript": "^4.2.3"
   },
   "dependencies": {
