--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.35",
     "@types/recursive-readdir": "^2.2.0",
+    "@types/rimraf": "^3.0.0",
     "@types/unzipper": "^0.10.3",
     "@types/uuid": "^8.3.0",
     "jsdoc": "^3.6.6",
@@ -50,6 +51,7 @@
     "meow": "^9.0.0",
     "open": "^8.0.4",
     "recursive-readdir": "^2.2.2",
+    "rimraf": "^3.0.2",
     "unzipper": "^0.10.11",
     "uuid": "^8.3.2"
   }
