--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "recursive-readdir": "^2.2.2",
     "rimraf": "^3.0.2",
     "unzipper": "^0.10.11",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xml-js": "^1.6.11"
   }
 }
