--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "bin": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "start": "npm run build && dist/cli.js",
     "rebuild": "rm -rf node_modules && npm i && npm run build"
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/jopemachine/arvis-core#readme",
   "devDependencies": {
     "@types/archiver": "^5.1.0",
+    "@types/chalk": "^2.2.0",
     "@types/chmodr": "^1.0.0",
     "@types/fs-extra": "^9.0.8",
     "@types/lodash": "^4.14.168",
@@ -36,7 +37,10 @@
     "@types/rimraf": "^3.0.0",
     "@types/unzipper": "^0.10.3",
     "@types/uuid": "^8.3.0",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.3"
   },
   "dependencies": {
@@ -55,5 +59,28 @@
     "unzipper": "^0.10.11",
     "uuid": "^8.3.2",
     "xml-js": "^1.6.11"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "globals": {
+      "ts-jest": {
+        "enableTsDiagnostics": true
+      }
+    },
+    "verbose": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test",
+      "pre-push": "npm run test"
+    }
   }
 }
