--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arvis-core",
   "version": "0.0.1",
-  "description": "Core part of Arvis, Designed as a common part of the CUI and GUI.",
+  "description": "Core part of Arvis, Designed as a core module of the CUI and GUI.",
   "main": "dist/index.js",
   "bin": "dist/main.js",
   "scripts": {
