--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "bin": "dist/main.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose ./__test__/unit",
     "build": "tsc",
     "start": "npm run build && dist/cli.js",
     "rebuild": "rm -rf node_modules && npm i && npm run build"
