--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
     "clipboardy": "^2.3.0",
+    "conf": "^10.0.1",
     "env-paths": "^2.2.1",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
