--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "arvis-core",
+  "name": "@jopemachine/arvis-core",
   "version": "0.0.1",
   "description": "Core part of Arvis, Designed as a core module of the CUI and GUI.",
   "main": "dist/index.js",
   "bin": "dist/main.js",
+  "files": [
+    "dist/**",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "test": "jest --verbose ./__test__/unit",
     "build": "tsc",
@@ -45,7 +50,7 @@
   },
   "dependencies": {
     "archiver": "^5.3.0",
-    "arvis-plist-converter": "../arvis-plist-converter",
+    "@jopemachine/arvis-plist-converter": "^0.0.1",
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
     "clipboardy": "^2.3.0",
