--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-core",
-  "version": "0.0.6",
+  "version": "0.0.10",
   "description": "Core part of Arvis, Designed as a core module of the CUI and GUI.",
   "main": "dist/index.js",
   "bin": "dist/main.js",
@@ -42,6 +42,7 @@
     "@types/node": "^14.14.35",
     "@types/recursive-readdir": "^2.2.0",
     "@types/rimraf": "^3.0.0",
+    "@types/semver": "^7.3.6",
     "@types/unzipper": "^0.10.3",
     "@types/uuid": "^8.3.0",
     "husky": "^6.0.0",
@@ -51,8 +52,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "archiver": "^5.3.0",
     "@jopemachine/arvis-plist-converter": "^0.0.4",
+    "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
     "clipboardy": "^2.3.0",
@@ -62,8 +63,10 @@
     "lodash": "^4.17.21",
     "meow": "^9.0.0",
     "open": "^8.0.4",
+    "readdirp": "^3.6.0",
     "recursive-readdir": "^2.2.2",
     "rimraf": "^3.0.2",
+    "semver": "^7.3.5",
     "unzipper": "^0.10.11",
     "uuid": "^8.3.2",
     "xml-js": "^1.6.11"
