--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-core",
-  "version": "0.1.26",
+  "version": "0.1.27",
   "description": "Core part of Arvis, Designed as a core module of the CUI and GUI.",
   "main": "dist/index.js",
   "bin": "dist/main.js",
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@jopemachine/arvis-plist-converter": "^0.1.1",
+    "@jopemachine/arvis-extension-validator": "^0.0.1",
     "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
