--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-core",
-  "version": "0.1.63",
+  "version": "0.1.64",
   "description": "Core part of Arvis, Designed as a core module of the CUI and GUI.",
   "main": "dist/index.js",
   "bin": "dist/main.js",
@@ -43,6 +43,7 @@
     "@types/fs-extra": "^9.0.8",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.35",
+    "@types/parse-json": "^4.0.0",
     "@types/recursive-readdir": "^2.2.0",
     "@types/rimraf": "^3.0.0",
     "@types/semver": "^7.3.6",
@@ -55,8 +56,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@jopemachine/arvis-plist-converter": "^0.1.1",
     "@jopemachine/arvis-extension-validator": "^0.0.1",
+    "@jopemachine/arvis-plist-converter": "^0.1.1",
     "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
@@ -68,6 +69,7 @@
     "meow": "^9.0.0",
     "open": "^8.0.4",
     "p-cancelable": "^2.1.1",
+    "parse-json": "^5.2.0",
     "readdirp": "^3.6.0",
     "recursive-readdir": "^2.2.2",
     "rimraf": "^3.0.2",
