--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-core",
-  "version": "0.1.75",
+  "version": "0.1.83",
   "description": "Core part of Arvis, Designed as a core module of the CUI and GUI.",
   "main": "dist/index.js",
   "bin": "dist/main.js",
@@ -46,6 +46,7 @@
     "@types/parse-json": "^4.0.0",
     "@types/rimraf": "^3.0.0",
     "@types/semver": "^7.3.6",
+    "@types/string-similarity": "^4.0.0",
     "@types/unzipper": "^0.10.3",
     "@types/uuid": "^8.3.0",
     "husky": "^6.0.0",
@@ -57,6 +58,7 @@
   "dependencies": {
     "@jopemachine/arvis-extension-validator": "^0.0.6",
     "@jopemachine/arvis-plist-converter": "^0.1.5",
+    "string-similarity": "^4.0.4",
     "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
