--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@jopemachine/arvis-core",
-  "version": "0.1.83",
-  "description": "Core part of Arvis, Designed as a core module of the CUI and GUI.",
+  "version": "0.1.93",
+  "description": "Core part of Arvis",
   "main": "dist/index.js",
   "bin": "dist/main.js",
   "files": [
     "dist/**",
-    "execa/**",
+    "execa/**/*.js",
     "LICENSE",
-    "README.md",
-    "package.json"
-  ],
+    "README.md"
+   ],
   "scripts": {
     "test": "jest --verbose ./__test__/unit",
     "build": "tsc",
@@ -57,8 +56,6 @@
   },
   "dependencies": {
     "@jopemachine/arvis-extension-validator": "^0.0.6",
-    "@jopemachine/arvis-plist-converter": "^0.1.5",
-    "string-similarity": "^4.0.4",
     "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
@@ -73,6 +70,7 @@
     "readdirp": "^3.6.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
+    "string-similarity": "^4.0.4",
     "unzipper": "^0.10.11",
     "uuid": "^8.3.2",
     "xml-js": "^1.6.11"
