--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest --verbose ./__test__/unit",
     "build": "tsc",
     "start": "npm run build && dist/cli.js",
+    "lint": "tslint --project tsconfig.json --fix",
     "rebuild": "rm -rf node_modules && npm i && npm run build"
   },
   "repository": {
@@ -52,6 +53,7 @@
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
     "ts-jest": "^26.5.6",
+    "tslint": "^6.1.3",
     "typescript": "^4.2.3"
   },
   "dependencies": {
@@ -95,8 +97,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test",
-      "pre-push": "npm run test"
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run lint"
     }
   }
 }
