--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "bin": "dist/main.js",
@@ -52,23 +52,26 @@
     "husky": "^4.2.5",
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
+    "sleep-synchronously": "^2.0.0",
     "ts-jest": "^26.5.6",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "arvis-extension-validator": "^0.0.2",
     "archiver": "^5.3.0",
+    "arvis-extension-validator": "^0.0.2",
     "chalk": "^4.1.0",
     "chmodr": "^1.2.0",
     "clipboardy": "^2.3.0",
     "conf": "^10.0.1",
     "env-paths": "^2.2.1",
     "fs-extra": "^9.1.0",
+    "is-promise": "^4.0.0",
     "lodash": "^4.17.21",
     "open": "^8.0.4",
     "p-cancelable": "^2.1.1",
     "parse-json": "^5.2.0",
+    "path-exists": "^4.0.0",
     "readdirp": "^3.6.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
