--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "bin": "dist/main.js",
@@ -58,6 +58,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "alpha-sort": "^5.0.0",
     "archiver": "^5.3.0",
     "arvis-extension-validator": "^0.0.3",
     "chalk": "^4.1.0",
