--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "bin": "dist/main.js",
@@ -40,7 +40,9 @@
     "@types/archiver": "^5.1.0",
     "@types/chalk": "^2.2.0",
     "@types/chmodr": "^1.0.0",
+    "@types/encodeurl": "^1.0.0",
     "@types/fs-extra": "^9.0.8",
+    "@types/is-url": "^1.2.29",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.35",
     "@types/parse-json": "^4.0.0",
@@ -65,9 +67,11 @@
     "chmodr": "^1.2.0",
     "clipboardy": "^2.3.0",
     "conf": "^10.0.1",
+    "encodeurl": "^1.0.2",
     "env-paths": "^2.2.1",
     "fs-extra": "^9.1.0",
     "is-promise": "^4.0.0",
+    "is-url": "^1.2.4",
     "lodash": "^4.17.21",
     "open": "^8.0.4",
     "p-cancelable": "^2.1.1",
