--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "engines": {
     "node": ">=12.x"
   },
+  "devEngines": {
+    "node": ">=14.x"
+  },
   "bugs": {
     "url": "https://github.com/jopemachine/arvis-core/issues"
   },
