--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
@@ -69,6 +69,7 @@
     "chmodr": "^1.2.0",
     "clipboardy": "^2.3.0",
     "conf": "^10.0.1",
+    "dot-prop": "^6.0.1",
     "encodeurl": "^1.0.2",
     "env-paths": "^2.2.1",
     "fs-extra": "^9.1.0",
