--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.3.7",
+  "version": "0.4.0",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
@@ -73,6 +73,7 @@
     "dot-prop": "^6.0.1",
     "encodeurl": "^1.0.2",
     "env-paths": "^2.2.1",
+    "execa": "^5.1.1",
     "fs-extra": "^9.1.0",
     "is-promise": "^4.0.0",
     "is-url": "^1.2.4",
