--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.8.5",
+  "version": "0.8.6",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
@@ -84,6 +84,7 @@
     "path-exists": "^4.0.0",
     "readdirp": "^3.6.0",
     "rimraf": "^3.0.2",
+    "safe-eval": "^0.4.1",
     "semver": "^7.3.5",
     "string-similarity": "^4.0.4",
     "unzipper": "^0.10.11",
