--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.9.3",
+  "version": "0.9.5",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
@@ -18,12 +18,22 @@
     "url": "git+https://github.com/jopemachine/arvis-core.git"
   },
   "keywords": [
-    "arvis"
+    "arvis",
+    "cross-platform",
+    "productivity",
+    "windows",
+    "macos",
+    "linux"
+  ],
+  "os": [
+    "darwin",
+    "win32",
+    "linux"
   ],
   "author": {
     "name": "jopemachine",
     "email": "jopemachine@gmail.com",
-    "url": "https://jopemachine.github.io/arvis-intro"
+    "url": "https://jopemachine.github.io/arvis.com/"
   },
   "license": "MIT",
   "engines": {
