--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.10.1",
+  "version": "0.10.3",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
@@ -20,10 +20,12 @@
   "keywords": [
     "arvis",
     "cross-platform",
-    "productivity",
     "windows",
     "macos",
-    "linux"
+    "linux",
+    "automation",
+    "launcher",
+    "productivity"
   ],
   "os": [
     "darwin",
