--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "arvis-core",
-  "version": "0.10.8",
+  "version": "0.12.3",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
-    "dist/**"
+    "dist/**",
+    "scripts/**"
   ],
   "scripts": {
     "test": "jest --verbose ./__test__/unit",
@@ -25,7 +26,8 @@
     "linux",
     "automation",
     "launcher",
-    "productivity"
+    "productivity",
+    "spotlight"
   ],
   "os": [
     "darwin",
