--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.13.2",
+  "version": "0.14.1",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
@@ -96,6 +96,7 @@
     "rimraf": "^3.0.2",
     "safe-eval": "^0.4.1",
     "semver": "^7.3.5",
+    "shell-env": "3.0.1",
     "string-similarity": "^4.0.4",
     "unzipper": "^0.10.11",
     "uuid": "^8.3.2",
