--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-core",
-  "version": "0.18.0",
+  "version": "0.19.0",
   "description": "Core module of Arvis",
   "main": "dist/index.js",
   "files": [
@@ -85,6 +85,7 @@
     "execa": "^5.1.1",
     "fs-extra": "^9.1.0",
     "is-url": "^1.2.4",
+    "json5": "^2.2.0",
     "lodash": "^4.17.21",
     "open": "^8.2.1",
     "p-cancelable": "^2.1.1",
